# Intelligent-cloud--Learning-platform

./: .env.example  .gitignore  README.md  init_db.sql  pyproject.toml  run.py
app/: main.py
app/api/: chat.py  chat_stream.py  document.py  session.py  session_history.py
app/clients/: base.py  course_client.py  search_client.py  trade_client.py
app/core/: config.py  nacos.py  response.py  security.py
app/domain/: events.py  models.py
app/memory/: __init__.py  redis_history.py
app/providers/: __init__.py  embedding.py  llm.py
app/rag/: hybrid_retriever.py  keyword_retriever.py  vector_retriever.py
app/repositories/: chat_message_repo.py  chat_session_repo.py  knowledge_chunk_repo.py  knowledge_document_repo.py  rag_query_log_repo.py  summary_snapshot_repo.py
app/services/: agent_service.py  chat_text_service.py  document_service.py  history_service.py  prompt_service.py  session_service.py  stream_chat_service.py  summary_service.py
app/tools/: course_tools.py  order_tools.py
tj-frontend/tj-frontend/: README.md  package-lock.json  package.json  vite.config.js
tj-frontend/tj-frontend/src/: App.vue  main.js
tj-frontend/tj-frontend/src/api/: intelligent.js
tj-frontend/tj-frontend/src/assets/: api.md
tj-frontend/tj-frontend/src/components/: ClassCategory.vue
tj-frontend/tj-frontend/src/config/: proxy.js
tj-frontend/tj-frontend/src/pages/ask/: askDetails.vue  index.scss
tj-frontend/tj-frontend/src/pages/layouts/: Untitled-2.html  (+7 more)
tj-frontend/tj-frontend/src/style/: index.scss
tj-frontend/tj-frontend/src/utils/: request.js  tool.js
(+13 files in other folders)
