[project]
name = "tj-aigc-py"
version = "0.1.0"
description = "Python + LangChain implementation of Tianji AIGC service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-chroma>=0.1.0",
  "langchain-text-splitters>=0.3.0",
  "chromadb>=0.5.0",
  "sqlalchemy>=2.0.0",
  "pymysql>=1.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
